@@ -50,6 +50,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #6939: Fix file I/O objects in the `io` module to keep the original
+  file position when calling `truncate()`.  It would previously change the
+  file position to the given argument, which goes against the tradition of
+  ftruncate() and other truncation APIs.  Patch by Pascal Chambon.
+
 - UserDict is now a new-style class.
 
 - Issue #7610: Reworked implementation of the internal
